# nclist-cpp

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  annotated.html  build_8hpp.html  build_8hpp_source.html  classes.html  dir_9176ee8b13bdf52351c6107864f7b03e.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacenclist.html  namespaces.html  nclist.tag  nclist_8hpp.html  nclist_8hpp_source.html  nearest_8hpp.html  nearest_8hpp_source.html  overlaps__any_8hpp.html  overlaps__any_8hpp_source.html  overlaps__end_8hpp.html  overlaps__end_8hpp_source.html  overlaps__equal_8hpp.html  overlaps__equal_8hpp_source.html  overlaps__extend_8hpp.html  overlaps__extend_8hpp_source.html  overlaps__start_8hpp.html  overlaps__start_8hpp_source.html  overlaps__within_8hpp.html  overlaps__within_8hpp_source.html  structnclist_1_1Nclist.html  structnclist_1_1NearestParameters-members.html  structnclist_1_1NearestParameters.html  structnclist_1_1NearestWorkspace.html  structnclist_1_1OverlapsAnyParameters-members.html  structnclist_1_1OverlapsAnyParameters.html  structnclist_1_1OverlapsAnyWorkspace.html  (+15 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  pages_0.js  pages_1.js  pages_3.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js
include/nclist/: build.hpp  nclist.hpp  nearest.hpp  overlaps_any.hpp  overlaps_end.hpp  overlaps_equal.hpp  overlaps_extend.hpp  overlaps_start.hpp  overlaps_within.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: build.cpp  nclist.cpp  nearest.cpp  overlaps_any.cpp  overlaps_end.cpp  overlaps_equal.cpp  overlaps_extend.cpp  overlaps_start.cpp  overlaps_within.cpp  utils.hpp
